<?xml version="1.0"?>
<package format="2">
  <name>dmu_ros</name>
  <version>0.0.0</version>
  <description>The dmu_ros package</description>

  <maintainer email="leutrim.gruda@leomuhendislik.com">Leutrim Gruda</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>


</package>
