<package>

    <name>dmu_ros</name>
    <version>0.1.0</version>
    <description>The DMU11 ROS driver</description>

    <maintainer email="leutrim.gruda@leomuhendislik.com">Leutrim Gruda</maintainer>
    <maintainer email="info@leomuhendislik.com">Leo Muhdendislik</maintainer>
    <author email="leutrim.gruda@leomuhendislik.com">Leutrim Gruda</author>
    <url>http://ros.org/wiki/dmu11driver</url>


    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>tf</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>roscpp</run_depend>


</package>
