<package>

    <name>dmu_ros</name>
    <version>1.1.0</version>
    <description>The DMU ROS driver</description>

    <maintainer email="daniil.lisus@robotics.utias.utoronto.ca">Daniil Lisus</maintainer>

    <license>BSD</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>tf</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>


</package>
